kustomization/overlays/prod/ttlsh/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-ci
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: ttlsh-ingress
spec:
  rules:
    - host: ephemeral-container-registry.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: ttl-registry
                port:
                  name: web
            path: /
            pathType: Prefix
